# sorkit

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE.md  README.md  pyproject.toml  results.tsv  run_oracle.sh  sor.yaml
.claude/skills/: experiment-loop.md
.github/workflows/: ci.yml
examples/sentiment/: sor.yaml
examples/sentiment/sentiment_optimized_code/: .mcp.json  CLAUDE.md  README.md  TEST_LOG.md  results.tsv  sor.yaml
examples/sentiment/sentiment_optimized_code/fixtures/: golden_set.json
examples/sentiment/sentiment_optimized_code/src/: api.py  classifier.py
examples/sentiment/sentiment_optimized_code/tests/: test_api_contract.py  test_classifier_accuracy.py  test_classifier_contract.py
examples/sentiment/src/: api.py  classifier.py
examples/sentiment/tests/: conftest.py
scripts/: guard-frozen-files.sh  notify.sh  ratchet.sh  sor-init.sh  sor-parse.py
src/sorkit/: __init__.py  __main__.py  audit.py  config.py  frozen.py  init.py  notify.py  oracle.py  ratchet.py  results.py  server.py
tests/: conftest.py  test_audit.py  test_config.py  test_frozen.py  test_init.py  test_notify.py  test_oracle.py  test_ratchet.py  test_results.py  test_server.py
